# solana-staking-example

./: .gitignore  README.md  deploy-localnet.sh  program-keypair.json  redeploy-localnet.sh
contracts/: Cargo.toml
contracts/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  processor_methods.rs  state.rs
interface/: package-lock.json  package.json
interface/src/: errors.ts
interface/src/models/: index.ts  staking-instructions.ts
interface/src/transactions/: create-initialize-pool.ts  create-user.ts  index.ts
interface/test/: environment.ts  helper.ts  staking.test.ts
interface/test-ledger/: faucet-keypair.json
