[package]
name = "solana-staking-example"
authors = ["<timofii.savinov@gmail.com>"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.15.2"
serde_with = "2.3.2"
borsh = "0.9.1"
thiserror = "1.0.30"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}

[dev-dependencies]
solana-sdk = "1.15.2"
serde = { version = "1.0.159", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
